2008-02-11  Karl Berry  <karl@gnu.org>

	* info/session.c (incremental_search): if a regex search,
	search every time through the loop, not only if the search
	succeeded.
	Bug report from Ralf Wildenhues, 8 Feb 2008 23:30:51.

2008-02-10  Karl Berry  <karl@gnu.org>

	* info/session.c (show_isearch_prompt): Start with "Regexp" if
	it's a regexp i-search.
	Suggestion from Ralf Wildenhues, 8 Feb 2008 23:30:51.

2008-02-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\includezzz): simply do the \input (instead of
	trickily expanding it after the }) a la \verbatiminput; otherwise,
	@value expansions are not done.  The trickery just seems unnecessary.
	Report from Joseph S. Myers, 1 Feb 2008 01:11:11.

2008-02-01  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\ptextop): save plain tex \top (a math symbol).
	(tex env): restore plain text \top.

2008-01-31  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Click Sequences): new section to document new
	commands @arrow, @clicksequence, @click, and @clickstyle.
	* doc/texinfo.tex (\clicksequence, \click, \clickstyle): define them.
	* makeinfo/cmds.h,
	* makeinfo/cmds.c (cm_arrow, cm_click, cm_clicksequence,
	cm_clickstyle): new fns.
	* insertion.h,
	* insertion.c (get_item_function): no longer static.
	* xml.h,
	* xml.c (CLICK, CLICKSEQUENCE): new elements.
	* util/texinfo.dtd (Inline.misc): add click and clicksequence.
	(rarr): new entity.

	* makeinfo/xml.c (xml_insert_entity): only do XML checks if we are
	actually outputting XML; this routine is also used for HTML output.

	* makeinfo/makeinfo.c (convert_from_loaded_file): move
	xml_begin_document to after we are sure the output file is open.

2008-01-30  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi, doc/info-stnd.texi (Back-Cover Text): new
	wording from rms.

2008-01-24  Karl Berry  <karl@gnu.org>

	* info/session.c (info_move_to_xref): must use fixed-string
	searches for these Info keywords that contain *.